--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-style: normal;
   font-weight: 700;
   font-family: 'Inter';
@@ -16,4 +16,24 @@
   font-display: swap;
   src: url('../assets/fonts/inter-regular.woff2') format('woff2'),
     url('../assets/fonts/inter-regular.woff') format('woff');
+} */
+
+@font-face {
+  font-style: normal;
+  font-weight: 500;
+  font-family: 'SFPro';
+
+  font-display: swap;
+  src: url('../assets/fonts/SFProDisplay-Medium.woff2') format('woff2'),
+    url('../assets/fonts/SFProDisplay-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: 'SFPro';
+
+  font-display: swap;
+  src: url('../assets/fonts/SFProDisplay-Regular.woff2') format('woff2'),
+    url('../assets/fonts/SFProDisplay-Regular.woff') format('woff');
 }
