--- a/src/components/CustomSelect/index.scss
+++ b/src/components/CustomSelect/index.scss
@@ -5,14 +5,13 @@
   position: relative;
 
   &#{$select-short} {
-    font-size: 0.75rem;
+    font-size: 0.875rem;
     line-height: 0.95rem;
-    border: solid 1px #ced4da;
+    border: none;
     border-radius: 4px;
 
     #{$parent}__current {
-      color: red;
-      min-width: 80px;
+      color: #002cfb;
     }
     #{$parent}__box {
       border: none;
@@ -31,15 +30,14 @@
     }
 
     #{$parent}__dropdown {
-      border: navajowhite;
-      border: solid 1px #ced4da;
-      border-radius: 0 0 4px 4px;
-      border-top: none;
+      border: 1px solid #eaf0fa;
+      box-shadow: 0px 0px 26px rgba(233, 237, 243, 0.8);
+      border-radius: 4px;
     }
 
-    &.select_show {
+    /*     &.select_show {
       border-radius: 4px 4px 0 0;
-    }
+    } */
   }
 
   &__hidden {
@@ -60,7 +58,7 @@
       top: calc(50% - 4px);
       transform: translateY(-50%);
       padding: 2px;
-      border: solid black;
+      border: solid #adbfdf;
       border-width: 0 2px 2px 0;
       transform: rotate(45deg);
     }
@@ -76,14 +74,11 @@
     position: absolute;
     flex-direction: column;
     row-gap: 0;
-    width: calc(100% + 2px);
+    width: max-content;
     top: 100%;
-    left: -1px;
     right: 0;
     background-color: $color-default-white;
-    /*     border: 1px solid #212529; */
-    /* box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2); */ /* filter: drop-shadow(0px 8px 16px rgba(0, 0, 0, 0.15)); */
-    padding: 5px 0 0;
+    padding: 0;
     z-index: 10;
     display: none;
 
@@ -95,11 +90,18 @@
   &__element {
     display: flex;
     align-items: center;
-    padding: 5px 12px;
-    /* margin-bottom: 8px; */
+    padding: 6px 20px;
+    color: #899cb1;
+    font-size: 0.875rem;
+    line-height: 1.75rem;
 
     &:hover {
-      background-color: red;
+      background-color: rgba(0, 44, 251, 0.13);
+      color: $color-text;
+    }
+
+    &:first-of-type {
+      color: $color-main-blue;
     }
 
     &:last-of-type {
@@ -118,7 +120,7 @@
     padding: 2px 20px 2px 8px;
     font-size: 0.875rem;
     line-height: 1;
-    color: red;
+    color: $color-light-blue;
     display: flex;
     align-items: center;
     margin-right: 12px;
@@ -141,5 +143,23 @@
 
   &__value {
     margin-left: 10px;
+  }
+}
+
+.custom-date {
+  display: flex;
+
+  &.select {
+    & .select__box {
+      padding: 0;
+
+      &::after {
+        content: none;
+      }
+    }
+
+    & .select__dropdown {
+      min-width: 104px;
+    }
   }
 }
