--- a/src/scss/reboot.scss
+++ b/src/scss/reboot.scss
@@ -6,6 +6,7 @@
 
 html {
   box-sizing: border-box;
+  font-size: 16px !important;
 }
 
 html,
@@ -17,11 +18,10 @@ body {
 body {
   width: 100%;
   height: 100%;
-
   font-style: normal;
   font-weight: 400;
   overflow-x: hidden;
-  font-family: $ff-inter;
+  font-family: $ff-sfpro;
 
   letter-spacing: 0.03em;
 
@@ -133,7 +133,15 @@ input[type='number'] {
 // ios button \ inputs reset
 select,
 textarea,
-input:matches([type='email'], [type='number'], [type='password'], [type='search'], [type='tel'], [type='text'], [type='url']) {
+input:matches(
+    [type='email'],
+    [type='number'],
+    [type='password'],
+    [type='search'],
+    [type='tel'],
+    [type='text'],
+    [type='url']
+  ) {
   appearance: none;
 }
 
